--- a/funcionario.html
+++ b/funcionario.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <h1>
-        BEM-VINDO AO GIT
+        BEM-VINDO AO funcionario
     </h1>
-        <a href="funcionario.html"><input type="button"></a>
-    
+        <a href="index.html">Voltar</a>
 </body>
 </html>
